fix description mobile version

--- a/styles/scss/content.scss
+++ b/styles/scss/content.scss
@@ -1,5 +1,4 @@
 .content {
 	width: 100%;
 	display: block;
-	border: 1px solid red;
 }
