--- a/styles/scss/description.scss
+++ b/styles/scss/description.scss
@@ -5,6 +5,10 @@
 	align-items: center;
 	text-transform: uppercase;
 
+	@include mobile {
+		padding-bottom: 40px;
+	}
+
 	&__return {
 		width: 66px;
 		height: 66px;
@@ -16,6 +20,13 @@
 
 		&:hover {
 			@extend %hover;
+		}
+
+		@include mobile {
+			width: 43px;
+			height: 43px;
+			margin-top: 11px;
+			margin-left: 16px;
 		}
 	}
 
@@ -29,6 +40,16 @@
 		line-height: 56px;
 		letter-spacing: 0.02em;
 		text-align: center;
+
+		@include mobile {
+			margin-top: -33px;
+			padding: 0px 22px 24px;
+			font-family: Montserrat;
+			font-size: 24px;
+			line-height: 29px;
+			letter-spacing: 1px;
+			text-align: left;
+		}
 	}
 
 	&__text {
@@ -41,6 +62,12 @@
 		letter-spacing: 0.02em;
 		text-align: center;
 
+		@include mobile {
+			font-size: 16px;
+			line-height: 31px;
+			letter-spacing: 1px;
+		}
+
 		span {
 			font-size: 48px;
 			font-style: normal;
@@ -49,6 +76,12 @@
 			letter-spacing: 0.02em;
 			text-align: center;
 			display: block;
+
+			@include mobile {
+				font-size: 24px;
+				line-height: 31px;
+				letter-spacing: 1px;
+			}
 		}
 	}
 }
