--- a/styles/scss/page.scss
+++ b/styles/scss/page.scss
@@ -21,7 +21,6 @@
 		margin: 0 auto;
 		width: 100;
 		max-width: 2240px;
-		border: 1px solid red;
 	}
 }
 
